# novel_flow

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
backend/: app.py
backend/graph/: graph.py  nodes_llm.py  placeholder.py  prompts.py  schemas.py  state.py
backend/llm/: __init__.py  client.py
backend/storage/: sqlite.py
backend/tests/: test_app.py  test_graph_flow.py  test_nodes_llm.py  test_placeholder_repo.py
fastapi/: __init__.py  applications.py  testclient.py
