[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel_flow"
version = "0.1.0"
description = "Backend skeleton for interactive novel workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
